# quad-tri

./: .gitattributes  .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md  test_output.txt
.github/workflows/: ci.yml
compiler/: Cargo.toml
compiler/qtri/: Cargo.toml
compiler/qtri/lang/: quad.rs  tri.rs
compiler/qtri/src/: ast.rs  driver.rs  emit_cranelift.rs  lex.rs  main.rs  module_loader.rs  parse.rs  sem.rs
compiler/qtrt/: Cargo.toml
compiler/quad0/: Cargo.toml
compiler/quadrt/: Cargo.toml
crates/qtri/: Cargo.toml
crates/qtri/lang/: quad.rs  tri.rs
crates/qtri/src/: ast.rs  driver.rs  emit_cranelift.rs  lex.rs  main.rs  module_loader.rs  parse.rs  sem.rs
crates/qtri/tests/: bool_keywords.rs  examples_golden.rs  foreach_iter.rs  inter_lang_imports.rs  practical_collections.rs  quad_enums.rs  quad_need_panic.rs  quad_recursive.rs  quad_result_try.rs  std_lib.rs  tri_recursive.rs  tri_req_panic.rs  tri_result_try.rs  visibility_check.rs
crates/qtrt/: Cargo.toml
examples/: test_std.quad
examples/quad/: arrays.quad  enums.quad  file_io.quad  fizzbuzz.quad  functions.quad  hello.quad  panic_need.quad  recursive.quad  result_try.quad  strings.quad  struct_size.quad  structs.quad  test.txt
examples/readme/: enums.quad  enums.tri  fizzbuzz.quad  fizzbuzz.tri  hello.quad  hello.tri  word_counter.quad  word_counter.tri
examples/tri/: arrays.tri  enums.tri  file_io.tri  fizzbuzz.tri  functions.tri  hello.tri  panic_req.tri  (+5 more)
spec/: quad.md  stage1.md  tri.md
std/: conv.quad  io.quad  iter.quad  map.quad  mem.quad  os.quad  text.quad  vec.quad
(+22 files in other folders)
