[package]
name = "qtri"
version = "0.1.0"
edition = "2021"

[dependencies]
cranelift = "0.113.0"
cranelift-codegen = "0.113.0"
cranelift-frontend = "0.113.0"
cranelift-module = "0.113.0"
cranelift-object = "0.113.0"
cranelift-native = "0.113.0"
target-lexicon = "0.12"

[dev-dependencies]
tempfile = "3"
