[package]
name = "qtri"
version = "0.1.0"
edition = "2024"

[dependencies]
cranelift = "0.124.3"
cranelift-codegen = "0.124.3"
cranelift-frontend = "0.124.3"
cranelift-module = "0.124.3"
cranelift-object = "0.124.3"
cranelift-native = "0.124.3"
target-lexicon = "0.12"

[dev-dependencies]
tempfile = "3"
